--- a/Stamp/Info.plist
+++ b/Stamp/Info.plist
@@ -16,6 +16,8 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>写真を保存します</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
